--- a/.gitattributes
+++ b/.gitattributes
@@ -69,3 +69,4 @@ processed-data/manhattan/view_512/chunk_0011.npy filter=lfs diff=lfs merge=lfs -
 processed-data/manhattan/view_512/chunk_0013.npy filter=lfs diff=lfs merge=lfs -text
 processed-data/pittsburgh/view_512/chunk_0002.npy filter=lfs diff=lfs merge=lfs -text
 processed-data/pittsburgh/view_512/chunk_0010.npy filter=lfs diff=lfs merge=lfs -text
+.npy filter=lfs diff=lfs merge=lfs -text
